--- a/src/App.scss
+++ b/src/App.scss
@@ -107,3 +107,10 @@
     width: 13vw;
   }
 }
+hr {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  border: 0;
+  border-top: 32px solid #3b3b3b;
+}
