--- a/src/App.scss
+++ b/src/App.scss
@@ -185,7 +185,7 @@ hr {
     padding-right: 0.2rem;
     padding-left: 0.2rem;
     display: flex;
-    
+
     @include bp("tablet") {
       flex-direction: column;
     }
@@ -198,7 +198,7 @@ hr {
       display: flex;
       flex-direction: column;
       text-align: center;
-      align-items:center;
+      align-items: center;
       img {
         width: 4vw;
         height: 4vw;
@@ -209,23 +209,86 @@ hr {
         font-size: small;
       }
     }
-    .message-column{
+    .message-column {
       display: flex;
 
-          
-    @include bp("tablet") {
-      width: 100%;
-    }
-    @include bp("laptop") {
-      width: 50%;
-    }
+      @include bp("tablet") {
+        width: 100%;
+      }
+      @include bp("laptop") {
+        width: 50%;
+      }
       flex-direction: column;
       justify-content: center;
     }
-    .time-id-column{
+    .time-id-column {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
     }
   }
+}
+
+.btn-primary {
+  background-color: white;
+  color: gray;
+  border-color: gray;
+}
+.btn-primary:hover {
+  color:black;
+  background-color: white;
+  border-color: gray;
+  border-color: gray;
+}
+
+.btn-primary:selection {
+  background-color: white;
+  border-color: gray;
+
+}
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.show > .btn-primary.dropdown-toggle:focus {
+  background-color: white;
+  border-color: gray;
+
+  border-color: gray;
+}
+
+.btn-primary.focus,
+.btn-primary:focus {
+  background-color:white;
+  border-color: gray;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.show > .btn-primary.dropdown-toggle {
+  background-color: white;
+  color: gray;
+}
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.show > .btn-primary.dropdown-toggle:focus {
+  box-shadow: none;
+  color: gray;
+  background-color: white;
+}
+.btn-primary.focus,
+.btn-primary:focus {
+  background-color: white;
+
+  box-shadow: none;
+  color: gray;
+}
+
+.btn-primary.focus,
+.btn-primary:focus {
+  border-color: gray;
+
+  color: gray;
+}
+.dropdown-item.active, .dropdown-item:active{
+  background-color: white;
+  color: gray;
 }
