message list and filter cursor style added

--- a/src/App.scss
+++ b/src/App.scss
@@ -175,6 +175,7 @@ hr {
   flex-direction: column;
   height: 650px;
   overflow: scroll;
+  overflow-x: hidden;
   .card-style {
     width: 90%;
     margin: auto;
