small ui changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "./mediaquery.scss";
 body {
   overflow-x: hidden;
+  font-family: 'Rubik', sans-serif;
 }
 .btn-mystyle {
   background-color: purple;
