--- a/src/App.scss
+++ b/src/App.scss
@@ -202,8 +202,8 @@ hr {
       text-align: center;
       align-items: center;
       img {
-        width: 4vw;
-        height: 4vw;
+        width: 58.25px;
+        height: 58.25px;
         border-radius: 5rem;
       }
       p {
